# Python-backend-course-2022

./: README.md  database.md  pyproject.toml
app/: contracts.py  main.py  routers.py
app/src/: database.py  integration_tests.py  main.py
app/src/auth/: contracts.py  handler.py  routers.py  test.py
app/src/deal/: contracts.py  handler.py  routers.py  test.py
app/src/schedule/: handler.py  routers.py  test.py
grpc/: __init__.py  client.py  database.py  server.py  test.py
grpc/protobuf/: GreetingService.proto
grpc/protobuf/builds/: GreetingService_pb2.py  GreetingService_pb2_grpc.py
