[tool.poetry]
name = "python-backend-course-2022"
version = "0.1.0"
description = ""
authors = ["rusteRR <alexvingra@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_backend_course_2022"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
