[tool.poetry]
name = "python-backend-course-2022"
version = "0.1.0"
description = ""
authors = ["rusteRR <alexvingra@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_backend_course_2022"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
unittest = "^0.0"
requests = "^2.28.1"
grpcio = "^1.49.1"
grpcio-tools = "^1.49.1"
googleapis-common-protos = "^1.56.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.11"
black = "^22.8.0"
pytest = "^7.1.3"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.4.0"
pep8-naming = "^0.13.2"
flake8-string-format = "^0.3.0"
flake8-bandit = "^4.1.1"
flake8-builtins = "^1.5.3"
flake8-black = "^0.3.3"
flake8-annotations-complexity = "^0.0.7"
flake8-requirements = "^1.7.1"
parametrized = "^0.1"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
